# msgpass

./: Cargo.toml  README.md  build.rs  mpi-run-example-hello.bash  run-examples.bash  run-single-test.bash  run-tests.bash
.github/workflows/: compile_and_test.yml  test_and_coverage.yml  test_on_linux.yml  test_on_linux_intel_mpi.yml  test_on_macos.yml  test_on_windows.yml
c_code/: constants.h  interface_mpi.c
examples/: ex_send_receive.rs  test_abort.rs  test_allgather.rs  test_allreduce_and.rs  test_allreduce_land.rs  test_allreduce_lor.rs  test_allreduce_lxor.rs  test_allreduce_max.rs  test_allreduce_min.rs  test_allreduce_or.rs  test_allreduce_prod.rs  test_allreduce_sum.rs  test_allreduce_xor.rs  test_barrier.rs  test_broadcast.rs  test_broadcast_i32.rs  test_comm_essential.rs  test_gather.rs  test_init.rs  test_init_single_thread.rs  test_init_thread.rs  test_init_threaded.rs  test_initialize.rs  test_rayon_monte_carlo_pi.rs  test_reduce_and.rs  test_reduce_land.rs  test_reduce_lor.rs  test_reduce_lxor.rs  test_reduce_max.rs  test_reduce_min.rs  test_reduce_or.rs  test_reduce_prod.rs  test_reduce_sum.rs  test_reduce_xor.rs  test_scatter.rs  test_send_receive.rs
src/: constants.rs  conversion.rs  enums.rs  interface_mpi.rs  lib.rs
zscripts/: install-intel-mpi-debian.bash
