[package]
name = "msgpass"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Thin wrapper to a Message Passing Interface (MPI)"
homepage = "https://github.com/cpmech/msgpass"
repository = "https://github.com/cpmech/msgpass"
documentation = "https://docs.rs/msgpass"
readme = "README.md"
categories = ["science"]
keywords = ["parallel", "cluster", "MPI"]

[dependencies]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rand = "0.8"
rayon = "1.8"
